@@ -60,3 +60,5 @@ if [ -x boot/myocamlbuild.native ]; then
 else
   OCAMLBUILD="./boot/ocamlrun boot/myocamlbuild"
 fi
+
+OCAMLBUILD="$OCAMLBUILD -no-ocamlfind"
